--- a/ESP32Code/platformio.ini
+++ b/ESP32Code/platformio.ini
@@ -13,6 +13,6 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
-;lib_deps = 
-;	adafruit/Adafruit LSM6DS@^4.7.4
-;	adafruit/Adafruit VL53L1X@^3.1.2
+lib_deps = 
+	adafruit/Adafruit LSM6DS@^4.7.4
+	adafruit/Adafruit VL53L1X@^3.1.2
